--- a/css/style.css
+++ b/css/style.css
@@ -7,4 +7,6 @@
 body{
     background-color: #000;
     color: #fff;
+    font-size: 2em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
